# TASTE-Runtime-Common

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Doxyfile  LICENSE  README.md  install.sh
.github/workflows/: workflow.yml
src/: CMakeLists.txt
src/Broker/: Broker.c  Broker.h  CMakeLists.txt
src/Common/: CMakeLists.txt  DriverHelper.c  DriverHelper.h
src/Escaper/: CMakeLists.txt  Escaper.c  Escaper.h  EscaperInternal.h
src/Mocks/: CMakeLists.txt  request_size.h  system_spec.h
src/Packetizer/: CCSDSPacketizer.c  CCSDSPacketizer.h  CMakeLists.txt  Crc16.c  Crc16.h  DeviceProvidedPacketizer.c  DeviceProvidedPacketizer.h  IsoChecksum.c  IsoChecksum.h  Packetizer.c  Packetizer.h  PacketizerInternal.h  PassthroughPacketizer.c  PassthroughPacketizer.h  SpacePacket.h  SpacePacketInternal.h  ThinPacketizer.c  ThinPacketizer.h  main.c
src/RuntimeCommon/: CMakeLists.txt  DriverHelper.c  DriverHelper.h  RoutingHelper.c  RoutingHelper.h
src/RuntimeMocks/: CMakeLists.txt  dataview-uniq.h  device_provided_packetizer.c  device_provided_packetizer.h  drivers_config.h  request_size.h  routing.c  routing.h  system_spec.c  system_spec.h
src/TimeService/: CMakeLists.txt  timeservice-api.c  timeservice-api.h  timeservice-dummy.h  timeservice-linux.h  timeservice-rtems.h  timeservice-utils.h  timeservice.c  timeservice.h
tests/: CMakeLists.txt  main.cc  main.cpp
tests/Broker/: BrokerTests.cc  CMakeLists.txt
tests/Escaper/: CMakeLists.txt  EscaperTests.cc  EscaperTests.cpp
tests/Packetizer/: CCSDSPacketizerTests.cc  CMakeLists.txt  PacketizerTests.cc  PacketizerTests.cpp  main.cpp
